#4 basis html gemaakt

--- a/index.html
+++ b/index.html
@@ -3,13 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnappThis</title>
+    <title>your groups</title>
     <link rel="stylesheet" href="https://hebaahx.github.io/look-and-feel-styleguide/styleguide-snappthis.css">
     <link rel="stylesheet" href="index.css">
-
-
 </head>
+
 <body>
+
+ <!--  Header -->
+ <header class="topbar">
+    <h1 class="header title">your groups</h1>
+    <button class="add-button">+</button>
+ </header>
     
+  <!-- group list -->
+<main>
+    <ul class="groups">
+
+      <li class="group">
+        <p class="group-name">Westerpark</p>
+        <p class="group-sub">Add your snapp!</p>
+      </li>
+
+      <li class="group">
+        <p class="group-name">Psychology 2a</p>
+        <p class="group-sub">32 members</p>
+      </li>
+
+      <li class="group">
+        <p class="group-name">Psychology 2b</p>
+        <p class="group-sub">55 members</p>
+      </li>
+
+    </ul>
+</main>
+
+  <!-- nav bar -->
+   <nav class="nav-bar">
+    <button></button>
+    <button></button>
+    <button></button>
+    <button></button>
+
+   </nav>
+
 </body>
 </html>
