--- a/index.html
+++ b/index.html
@@ -40,11 +40,21 @@
 
   <!-- nav bar -->
    <nav class="nav-bar">
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
+    <button class="nav-bar">
+        <img src="assets/logo.svg" alt="home">
+    </button>
 
+    <button class="nav-bar">
+        <img src="assets/search.svg" alt="search">
+    </button>
+
+    <button class="nav-bar active">
+        <img src="assets/group.svg" alt="groups">
+    </button>
+
+    <button class="nav-bar">
+        <img src="assets/user.svg" alt="profile">
+    </button>
    </nav>
 
 </body>
