--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
  <!--  Header -->
  <header class="topbar">
-    <h1 class="header title">your groups</h1>
+    <h1 class="header-title">your groups</h1>
     <button class="add-button">+</button>
  </header>
     
