--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
 
   <!-- nav bar -->
    <nav class="nav-bar">
-    <button class="nav-bar">
+    <button class="nav-item">
         <img src="assets/logo.svg" alt="home">
     </button>
 
-    <button class="nav-bar">
+    <button class="nav-item">
         <img src="assets/search.svg" alt="search">
     </button>
 
-    <button class="nav-bar active">
+    <button class="nav-item active">
         <img src="assets/group.svg" alt="groups">
     </button>
 
-    <button class="nav-bar">
+    <button class="nav-item">
         <img src="assets/user.svg" alt="profile">
     </button>
    </nav>
