--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <label for="memberscanadd">Members can add snapp from roll</label>
       </li>
 
+      <li class="popup-item upload-field">
+        <label for="upload">upload</label>
+        <input type="file" id="snappupload" accept="image/*">
+      </li>
+
       <li class="popup-item leave">
         <img src="assets/leave.svg" alt="leave group">
         <span>Leave this group</span>
