#18 a link ipv buttons

--- a/index.html
+++ b/index.html
@@ -65,22 +65,33 @@
 
   <!-- nav bar -->
    <nav class="nav-bar">
-    <button class="nav-item">
-        <img src="assets/logo.svg" alt="home">
-    </button>
+    <ul>
+      <li class="nav-item">
+        <a href="#">
+         <img src="assets/logo.svg" alt="home">
+        </a>
+     </li>
 
-    <button class="nav-item">
-        <img src="assets/search.svg" alt="search">
-    </button>
+      <li class="nav-item">
+        <a href="#">
+         <img src="assets/search.svg" alt="search">
+        </a>
+      </li>
 
-    <button class="nav-item active">
-        <img src="assets/group.svg" alt="groups">
-    </button>
+      <li class="nav-item active">
+        <a href="#">
+         <img src="assets/group.svg" alt="groups">
+        </a>
+      </li>
 
-    <button class="nav-item">
+      <li class="nav-item">
+       <a href="#">
         <img src="assets/user.svg" alt="profile">
-    </button>
+       </a>
+     </li>
+    </ul>
    </nav>
+
  <script src="index.js"></script>
 </body>
 </html>
