--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <li class="group">
         <p class="group-name">Westerpark</p>
-        <p class="group-sub clickable" onclick="openMenu()">Add your snapp!</p>
+        <button class="group-sub clickable" onclick="openMenu()">Add your snapp! </button>
       </li>
 
       <li class="group">
@@ -85,7 +85,7 @@
       </li>
 
       <li class="nav-item">
-       <a href="#">
+       <a href="#" class="nav-item">
         <img src="assets/user.svg" alt="profile">
        </a>
      </li>
