#20 a in de header
a link in de header ipv button

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
 
  <!--  Header -->
- <header class="topbar">
-    <h1 class="header-title">your groups</h1>
-    <button class="add-button">+</button>
+ <header class="header">
+    <h1 class="header-title">Your groups</h1>
+    <a href="#" class="add">
+      <img src="assets/add.svg" alt="add">
+    </a>
  </header>
     
   <!-- group list -->
