--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </li>
 
       <li class="nav-item">
-       <a href="#" class="nav-item">
+       <a href="password.html" class="nav-item">
         <img src="assets/user.svg" alt="profile">
        </a>
      </li>
