--- a/password.html
+++ b/password.html
@@ -8,29 +8,30 @@
     <link rel="stylesheet" href="password.css">
 </head>
 <body> 
+
  <!--  Header -->
    <header class="header">
-    <h1 class="change-password">Change password</h1>
-    <a href="index.html" class="arrow">
+     <a href="index.html" class="arrow">
         <img src="assets/arrow-left.svg" alt="back-arrow">
-    </a>
+     </a>
+     <h1 class="change-password">Change password</h1>
    </header>
 
-    <div>
+    <div class="form-wrapper">
         <label for="current-pwd">Current password</label>
-        <input type="text" id="current-password" placeholder="current password" required>
+        <input type="password" id="current-password" placeholder="current password" required>
    </div>
 
-   <div>
+   <div class="form-wrapper">
          <label for="new-pwd">New password</label>
-         <input type="new-password" id="new-pwd" placeholder="new password" required>      
+         <input type="password" id="new-pwd" placeholder="new password" required>      
    </div>
 
-   <div>
+   <div class="form-wrapper">
          <label for="new-pwdr">New password (repeat)</label>
-         <input type="new-password-repeat" id="new-pwdr" placeholder="new-password-repeat" required>
+         <input type="password" id="new-pwdr" placeholder="new-password-repeat" required>
    </div>
-   <button type="submit">Done!</button>
+   <button type="submit" class="done-btn">Done!</button>
 </body>
 
 </html>
