--- a/password.html
+++ b/password.html
@@ -18,20 +18,50 @@
    </header>
 
     <div class="form-wrapper">
-        <label for="current-pwd">Current password</label>
-        <input type="password" id="current-password" placeholder="current password" required>
+        <label for="current-password">Current password</label>
+        <input type="password" id="current-password" required placeholder="current password" required>
    </div>
 
    <div class="form-wrapper">
-         <label for="new-pwd">New password</label>
-         <input type="password" id="new-pwd" placeholder="new password" required>      
+         <label for="new-password">New password</label>
+         <input type="password" id="new-password" required placeholder="new password" required>      
    </div>
 
    <div class="form-wrapper">
-         <label for="new-pwdr">New password (repeat)</label>
-         <input type="password" id="new-pwdr" placeholder="new-password-repeat" required>
+         <label for="new-password-repeat">New password (repeat)</label>
+         <input type="password" id="new-password-repeat" required placeholder="new-password-repeat" required>
    </div>
    <button type="submit" class="done-btn">Done!</button>
+
+   
+  <!-- nav bar -->
+   <nav class="nav-bar">
+    <ul>
+      <li class="nav-item">
+        <a href="#">
+         <img src="assets/logo.svg" alt="home">
+        </a>
+     </li>
+
+      <li class="nav-item">
+        <a href="#">
+         <img src="assets/search.svg" alt="search">
+        </a>
+      </li>
+
+      <li class="nav-item active">
+        <a href="#">
+         <img src="assets/group.svg" alt="groups">
+        </a>
+      </li>
+
+      <li class="nav-item">
+       <a href="password.html" class="nav-item">
+        <img src="assets/user.svg" alt="profile">
+       </a>
+     </li>
+    </ul>
+   </nav>
 </body>
 
 </html>
