--- a/password.html
+++ b/password.html
@@ -14,25 +14,30 @@
      <a href="index.html" class="arrow">
         <img src="assets/arrow-left.svg" alt="back-arrow">
      </a>
-     <h1 class="change-password">Change password</h1>
+     <h1 class="header-title">Change password</h1>
    </header>
 
-    <div class="form-wrapper">
-        <label for="current-password">Current password</label>
-        <input type="password" id="current-password" required placeholder="current password" required>
-   </div>
+   <main>
+     <form class="password-form">
 
-   <div class="form-wrapper">
-         <label for="new-password">New password</label>
-         <input type="password" id="new-password" required placeholder="new password" required>      
-   </div>
+        <div class="form-wrapper">
+            <label for="current-password">Current password</label>
+            <input type="password" id="current-password" required placeholder="current password" required>
+        </div>
 
-   <div class="form-wrapper">
-         <label for="new-password-repeat">New password (repeat)</label>
-         <input type="password" id="new-password-repeat" required placeholder="new-password-repeat" required>
-   </div>
-   <button type="submit" class="done-btn">Done!</button>
+        <div class="form-wrapper">
+            <label for="new-password">New password</label>
+            <input type="password" id="new-password" required placeholder="new password" required>      
+        </div>
 
+        <div class="form-wrapper">
+            <label for="new-password-repeat">New password (repeat)</label>
+            <input type="password" id="new-password-repeat" required placeholder="new-password-repeat" required>
+        </div>
+        <button type="submit" class="done-btn">Done!</button>
+
+     </form>
+   </main>
    
   <!-- nav bar -->
    <nav class="nav-bar">
