#29 bijschrift kleiner gemaakt

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- group list -->
 <main>
 
-  <div class="popup-menu" id="popupmenu">
+  <section class="popup-menu" id="popupmenu">
     <ul>
       <li class="popup-item">
         <input type="checkbox" id="memberscanadd">
@@ -43,7 +43,7 @@
         <span>Delete this group</span>
       </li>
     </ul>
-  </div>
+  </section>
 
     <ul class="groups">
 
