--- a/password.html
+++ b/password.html
@@ -20,20 +20,20 @@
    <main>
      <form class="password-form">
 
-        <div class="form-wrapper">
+        <section class="form-wrapper">
             <label for="current-password">Current password</label>
             <input type="password" id="current-password" required placeholder="current password" required>
-        </div>
+        </section>
 
-        <div class="form-wrapper">
+        <section class="form-wrapper">
             <label for="new-password">New password</label>
             <input type="password" id="new-password" required placeholder="new password" required>      
-        </div>
+        </section>
 
-        <div class="form-wrapper">
+        <section class="form-wrapper">
             <label for="new-password-repeat">New password (repeat)</label>
             <input type="password" id="new-password-repeat" required placeholder="new-password-repeat" required>
-        </div>
+        </section>
         <button type="submit" class="done-btn">Done!</button>
 
      </form>
