--- a/password.html
+++ b/password.html
@@ -22,18 +22,34 @@
 
         <section class="form-wrapper">
             <label for="current-password">Current password</label>
-            <input type="password" id="current-password" required placeholder="current password" required>
+            <input 
+               type="password"
+               id="current-password" 
+               name="current-password"
+               required 
+               placeholder="Enter your current password" >
         </section>
 
         <section class="form-wrapper">
             <label for="new-password">New password</label>
-            <input type="password" id="new-password" required placeholder="new password" required>      
+            <input 
+               type="password"
+               id="new-password" 
+               name="new-password"
+               required 
+               placeholder="Enter your new password" >      
         </section>
 
         <section class="form-wrapper">
             <label for="new-password-repeat">New password (repeat)</label>
-            <input type="password" id="new-password-repeat" required placeholder="new-password-repeat" required>
+            <input 
+               type="password" 
+               id="new-password-repeat" 
+               name="new-password-repeat"
+               required 
+               placeholder="Repeat your new password" >
         </section>
+
         <button type="submit" class="done-btn">Done!</button>
 
      </form>
