#34 alt aangepast voor index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <header class="header">
     <h1 class="header-title">Your groups</h1>
     <a href="#" class="add">
-      <img src="assets/add.svg" alt="add">
+      <img src="assets/add.svg" alt="add new group">
     </a>
  </header>
     
@@ -29,17 +29,17 @@
       </li>
 
       <li class="popup-item upload-field">
-        <label for="upload">upload</label>
+        <label for="snappupload">upload</label>
         <input type="file" id="snappupload" accept="image/*">
       </li>
 
       <li class="popup-item leave">
-        <img src="assets/leave.svg" alt="leave group">
+        <img src="assets/leave.svg" alt="leave this group">
         <span>Leave this group</span>
       </li>
 
       <li class="popup-item delete">
-        <img src="assets/delete.svg" alt="delete group">
+        <img src="assets/delete.svg" alt="delete this group">
         <span>Delete this group</span>
       </li>
     </ul>
@@ -70,25 +70,25 @@
     <ul>
       <li class="nav-item">
         <a href="#">
-         <img src="assets/logo.svg" alt="home">
+         <img src="assets/logo.svg" alt="home page">
         </a>
      </li>
 
       <li class="nav-item">
         <a href="#">
-         <img src="assets/search.svg" alt="search">
+         <img src="assets/search.svg" alt="search content">
         </a>
       </li>
 
       <li class="nav-item active">
         <a href="#">
-         <img src="assets/group.svg" alt="groups">
+         <img src="assets/group.svg" alt="your groups">
         </a>
       </li>
 
       <li class="nav-item">
        <a href="password.html" class="nav-item">
-        <img src="assets/user.svg" alt="profile">
+        <img src="assets/user.svg" alt="your profile">
        </a>
      </li>
     </ul>
