#34 alt aangepast voor password.html

--- a/password.html
+++ b/password.html
@@ -12,7 +12,7 @@
  <!--  Header -->
    <header class="header">
      <a href="index.html" class="arrow">
-        <img src="assets/arrow-left.svg" alt="back-arrow">
+        <img src="assets/arrow-left.svg" alt="go back to previous page">
      </a>
      <h1 class="header-title">Change password</h1>
    </header>
@@ -60,25 +60,25 @@
     <ul>
       <li class="nav-item">
         <a href="#">
-         <img src="assets/logo.svg" alt="home">
+         <img src="assets/logo.svg" alt="home page">
         </a>
      </li>
 
       <li class="nav-item">
         <a href="#">
-         <img src="assets/search.svg" alt="search">
+         <img src="assets/search.svg" alt="search content">
         </a>
       </li>
 
       <li class="nav-item active">
         <a href="#">
-         <img src="assets/group.svg" alt="groups">
+         <img src="assets/group.svg" alt="your groups">
         </a>
       </li>
 
       <li class="nav-item">
        <a href="password.html" class="nav-item">
-        <img src="assets/user.svg" alt="profile">
+        <img src="assets/user.svg" alt="your profile">
        </a>
      </li>
     </ul>
